# kinect

./: README
Deprecated/: CMakeLists.txt  makefile
Deprecated/lib/: XEventsEmulation.h
HandSegment/: CMakeLists.txt  backup.main  fingerSegment  handSegment  handTracking.cpp  main.cpp  makefile
HandSegment/kinectfingertip/: KinectFingertip.cpp  main.cpp
HandSegment/kinectfingertip/lib/: cvCompute.h  cvFingerPoints.h
HandSegment/lib/: cvCompute.h  cvFingerPoints.h
HandTracking/: CMakeLists.txt  main.cpp  makefile
HandTracking/data/: config.json
HandTracking/lib/: HandTracker.cpp  HandTracker.h  cvFingerPoints.h
Scene/: CMakeLists.txt  backup.main  main.cpp
Server/: CMakeLists.txt  KinectClient.cpp  KinectServer.java  makefile
glmf/LinuxMag-UtilisationDeLaKinect/: CMakeLists.txt  README  main.c
glmf/oneshot/: CMakeLists.txt  oneshot.c  oneshot.h
motorAndAudio/: KinectControl.h  example.cpp  main.cpp  makefile
template/: CMakeLists.txt  main.cpp
viewer/: CMakeLists.txt  depthDisplay.cpp  depthDisplay.h  depthTuto.cpp  depthTuto.cpp~
